# pcsx2-libretro

./: .gitignore  CMakeLists.txt
cmake/: BuildParameters.cmake  SearchForStuff.cmake
common/: CMakeLists.txt  CocoaTools.mm  Console.cpp  Misc.cpp  Perf.h  WindowInfo.h
common/D3D12/: Context.cpp
common/GL/: Context.cpp  ContextRetroGL.cpp  ContextRetroGL.h
common/Vulkan/: Builders.cpp
libretro/: CMakeLists.txt  Console.cpp  DEV9.cpp  InputRecording.cpp  SPU2.cpp  USB.cpp  build.cmake  input.cpp  libretro_d3d.h  libretro_vulkan.cpp  libretro_vulkan.h  main.cpp
pcsx2/: CMakeLists.txt  Config.h  GS.cpp  GS.h  GSDumpReplayer.cpp  Gif_Unit.h  MTGS.cpp  MTVU.cpp  PINE.cpp  Pcsx2Config.cpp  StateWrapper.h  System.cpp  VMManager.cpp  VirtualMemory.cpp
pcsx2/CDVD/: CDVD.cpp
pcsx2/Frontend/: CommonHost.cpp  CommonHotkeys.cpp  GameList.cpp  LogSink.cpp
pcsx2/GS/: GS.cpp  GS.h
pcsx2/GS/Renderers/Common/: GSDevice.cpp  GSDevice.h  GSFastList.h  GSRenderer.cpp  GSTexture.cpp
pcsx2/GS/Renderers/DX11/: GSDevice11.cpp  GSDevice11.h  GSTexture11.cpp
pcsx2/GS/Renderers/DX12/: GSDevice12.cpp  GSDevice12.h
pcsx2/GS/Renderers/Metal/: GSDeviceMTL.mm
pcsx2/GS/Renderers/Null/: GSDeviceNull.cpp  GSDeviceNull.h
pcsx2/GS/Renderers/OpenGL/: GSDeviceOGL.cpp  GSDeviceOGL.h  GSTextureOGL.cpp
pcsx2/GS/Renderers/SW/: GSTextureSW.cpp
pcsx2/GS/Renderers/Vulkan/: GSDeviceVK.cpp  GSDeviceVK.h
pcsx2/PAD/Host/: PAD.cpp  StateManagement.cpp
pcsx2/SPU2/: Mixer.cpp  Reverb.cpp  spu2sys.cpp
